// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/system_users/system_users_dropdown/system_users_dropdown.jsx renderDeactivateMemberModal should not render the bot accounts warning in case the user do not have any bot accounts 1`] = `
<div>
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="This action deactivates {username}. They will be logged out and not have access to any teams or channels on this system.\\\\n"
    id="deactivate_member_modal.desc"
    values={
      Object {
        "username": undefined,
      }
    }
  />
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="Are you sure you want to deactivate {username}?"
    id="deactivate_member_modal.desc.confirm"
    values={
      Object {
        "username": undefined,
      }
    }
  />
  <strong>
    <br />
    <br />
    <FormattedMessage
      defaultMessage="You must also deactivate this user in the SSO provider or they will be reactivated on next login or sync."
      id="deactivate_member_modal.sso_warning"
      values={Object {}}
    />
  </strong>
</div>
`;

exports[`components/admin_console/system_users/system_users_dropdown/system_users_dropdown.jsx renderDeactivateMemberModal should render the bot accounts warning in case the user do has any bot accounts 1`] = `
<div>
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="This action deactivates {username}. They will be logged out and not have access to any teams or channels on this system.\\\\n"
    id="deactivate_member_modal.desc"
    values={
      Object {
        "username": undefined,
      }
    }
  />
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="* Bot accounts they manage will be disabled along with their integrations. To enable them again, go to Integrations > Bot Accounts. [Learn more about bot accounts](!https://mattermost.com/pl/default-bot-accounts).\\\\n \\\\n \\\\n"
    id="deactivate_member_modal.desc.bot_accounts_disclaimer"
  />
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="Are you sure you want to deactivate {username}?"
    id="deactivate_member_modal.desc.confirm"
    values={
      Object {
        "username": undefined,
      }
    }
  />
  <strong>
    <br />
    <br />
    <FormattedMessage
      defaultMessage="You must also deactivate this user in the SSO provider or they will be reactivated on next login or sync."
      id="deactivate_member_modal.sso_warning"
      values={Object {}}
    />
  </strong>
</div>
`;
